# att_lstm

./: .gitignore  CLAUDE.md  config.py  config_loader.py  data_module.py  eval_hot_map_2.py  main.py  main_hot_map.py  main_hot_map2.py  plot_prediction_target.py  pyproject.toml  save_sequenceID_timestep.py  save_test_results.py  test_predict_actual.py
.claude/: settings.local.json
comparison/: data_seed42.py
config/: base_config.yaml  loader.py  settings.py
data/: README.md
docs/: README.md  configuration.md  data_pipeline.md  evaluation.md  evaluation_pipeline.md  implementation_plan_lstm_attention.md  models.md  training.md
figures/: attention_weights_plot.pgf  fig_attention_comparison.pgf  fig_forest_ci.pgf  fig_inference_mae_tradeoff.pgf  fig_prediction_timeseries.pgf  fig_prediction_timeseries_mae.pgf  inference_accuracy_tradeoff.pgf  prediction_timeseries.pgf
model/: CNN_eval.py  LSTM.py  LSTM_DotAttention_timestep.py  LSTM_DotAttention_variable.py  LSTM_attention.py  LSTM_attention_eval.py  data_module.py  lstm_scaled_dp_attention.py  mlp_baseline.py
notebooks/: attention_analysis.ipynb  eval.ipynb
optuna/: optuna.db  optuna1.py  optuna2.py  optuna3.py
plot/: plot_steer[-0.25,0.25].py  plot_steer[-1,1].py  plot_steer_distribution.py  sample_duration.py  vEgo.py
preprocess/: data_preprocessing.py  inspect_dataset.py  preprocess_parallel.py  random_sample.py  slice_window.py  slice_window_20999.py  slice_window_nF.py
results/: m1_results.json  m3_results.json
scripts/: batch_runner.py  bootstrap_evaluation.py  compare_results.py  compute_sequence_r2.py  evaluate_model.py  export_attention_weights.py  (+13 more)
(+1007 files in other folders)
